Fixed spacing for page headers and container sizes. Added style to popup.

--- a/styles/canvasStyle.css
+++ b/styles/canvasStyle.css
@@ -14,12 +14,42 @@
 }
 
 #popup{
-    box-shadow: 2px 2px rgba(0, 0, 0, 0.125);
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.125);
+    background-color: white;
     border-radius: 20px;
     border-width: 6px;
+    border-color: rgb(118, 118, 240);
     width: 70%;
+    font-family: Quicksand;
 }
 
-#playButton{
+#popup button{
+    background-color: rgb(118, 118, 240);
+    color: white;
+    border: none;
+    border-radius: 8px;
+    margin: 15px;
+    height: 20px;
+    box-shadow: 1px 1px rgba(0, 0, 0, 0.125);
+}
+
+#popup button:hover{
+    cursor: pointer;
     
+    background-color: rgb(118, 118, 240);
+    margin: 15px;
+}
+
+#popup h2, #popup h3{
+    margin-bottom: 4px;
+}
+
+#popup h3{
+    margin-bottom: 4px;
+    margin-top:4px;
+}
+
+#initials{
+    width: 100px;
+    text-align: center;
 }
