--- a/styles/style.css
+++ b/styles/style.css
@@ -97,6 +97,11 @@ a{
 }
 
 #how-to-play:hover{
+	color:yellow;
+	font-weight: bold;
+}
+
+#funfacts:hover{
 	color:green;
 	font-weight: bold;
 }
@@ -184,8 +189,6 @@ footer{
 
 #canvas-container{
 	margin-top: 80px;
-	width: 400px;
-	height: 700px;
 	border: 8px solid rgb(255, 255, 255);
 	border-radius: 20px;
 	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.125);
@@ -197,7 +200,7 @@ footer{
 	justify-content: top;
 	align-items: center;
 	flex-direction: column;
-	padding-top: 200px;
+	margin-top: 100px;
 	width: 100%;
 	height: 1000px;
 }
@@ -218,7 +221,7 @@ footer{
 	border: 5px white solid;
 	font-family: Arcade;
 	border-radius: 20px;
-	width: 1600px;
+	width: 800px;
 	text-align: center;
 	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.125);
 }
@@ -249,7 +252,7 @@ footer{
 	justify-content: top;
 	align-items: center;
 	flex-direction: column;
-	padding-top: 200px;
+	margin-top: 100px;
 	width: 100%;
 	height: 1000px;
 }
@@ -270,7 +273,7 @@ footer{
 	border: 5px white solid;
 	font-family: Arcade;
 	border-radius: 20px;
-	width: 1600px;
+	width: 1000px;
 	text-align: center;
 	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.125);
 }
@@ -307,7 +310,7 @@ footer{
 	justify-content: top;
 	align-items: center;
 	flex-direction: column;
-	padding-top: 200px;
+	padding-top: 100px;
 	width: 100%;
 	height: 1000px;
 }
@@ -328,7 +331,7 @@ footer{
 	border: 5px white solid;
 	font-family: Arcade;
 	border-radius: 20px;
-	width: 1600px;
+	width: 1000px;
 	text-align: center;
 	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.125);
 }
